--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-    "name": "hammunima/crudgen",
+    "name": "hammunima15/crudgen",
     "description": "CRUD Generator ..",
     "type": "library",
     "require": {
-        "php": "7.0",
+        "php": ">=7.0",
         "illuminate/support": "^5.7"
     },
     "authors": [
