--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "hammunima15/crudgen",
     "description": "CRUD Generator ..",
-    "type": "library",
+    "license": "MIT",
     "require": {
         "php": ">=7.0",
         "illuminate/support": "^5.7"
