--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "license": "MIT",
     "require": {
         "php": ">=7.0",
-        "illuminate/support": "^5.7"
+        "illuminate/support": "~5.1"
     },
     "authors": [
         {
