--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,13 @@
         }
     ],
     "minimum-stability": "stable",
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Hammunima\\Crudgen\\CrudgenServiceProvider"
+            ],
+        }
+    },
     "autoload": {
         "psr-4": {
             "Hammunima\\Crudgen\\": "src/"
